# gc-content-analyzer

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  gc_analysis.py  mkdocs.yml  pyproject.toml  requirements.txt  test.py
data/ncbi_dataset/: md5sum.txt
data/ncbi_dataset/data/: assembly_data_report.jsonl  data_summary.tsv  dataset_catalog.json
docs/: index.md
ncbi_temp/: ncbi_temp.faa
notebooks/: GC_Content_Analyzer.ipynb
results/: amino_acid_composition.csv  gc_content_per_gene.csv  gc_content_per_sequence.csv
site/: index.html
site/search/: search_index.json
src/gc_analysis/: __init__.py  gc_analysis.py
tests/: test_gc_analysis.py
